Order discovery lessons and add three item interaction chapters